[B]2.7.X[/B]
- New cache functions (taken from ResolveURL and adapted)
- Various other tweaks

[B]2.6.X[/B]
- Removed cloudflare related functions as they need too frequent updates
- Improved parsers module
- Added feed parser & thumbmaker into youtube module
- Logging module tweaks
- Updated user agents
- Allow some modules to be used outside of Kodi as standalone ones
- Allow nextitem to have title and/or name property
- Add ability to clear all bookmarks at once
- Add integer labels as optional parameters
- Moved a few functions from client to other modules
- Added the quote paths function, useful for non ascii characters in urls
- Fix in url_dispatcher module
- Added a few functions into control module
- A few changes for Kodi 19+

[B]2.5.X[/B]
- Tweaks in client module (updated cfscrape & some minor other tweaks)
- Added the parsers module
- Moved parseDOM into parsers module, retained import
- Moved replaceHTMLCodes into cleantitle module
- Added the boolean to disable verification of certificate in directory.resolve function
- Various other tweaks

[B]2.4.X[/B]
- User agents module tweaks
- Addition of ability to autoplay through a playlist mode
- Added some debug logging for client.request and directory.add
- Removed some unused functions
- Minor other tweaks

[B]2.3.X[/B]
- Add function (directory) can now set plugin category for skins to display
- Changed all "BaseException" into "Exception"
- Replaced builtin eval with ast.literaleval which is more secure
- Added the fuzzywuzzy library for fuzzy string matching
- Moved all user agent related functions and strings into new user_agent module
- Added datetime keys for youtube videos
- Compat module enhancements
- Cleantitle module enhancements
- Request function enhancements for python 3
- Directory module bugfixes
- Added replace xml codes function
- Youtube module performance tweaks
- Update m3u8 modules (thanks globocom)
- Update user agent strings
- Various other tweaks

[B]2.2.X[/B]