@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="2.7.5" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="2.8.0" provider-name="Twilight0">
     <requires>
-        <import addon="xbmc.python" version="2.24.0"/>
+        <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
     </requires>
     <extension point="xbmc.python.module" library="lib" />
@@ -11,24 +11,14 @@
         <platform>all</platform>
         <license>GPL-3.0-only</license>
         <source>https://github.com/Twilight0/script.module.tulip</source>
-        <news>[B]2.7.X[/B]
-- New cache functions (taken from ResolveURL and adapted)
-- Various other tweaks
+        <news>[B]2.8.X[/B]
+- Replaced xbmc.python import with xbmc.addon for Matrix compatibility
+- New utils module
+- Updated user agent strings
+- Updated m3u8 modules
 
-[B]2.6.X[/B]
-- Removed cloudflare related functions as they need too frequent updates
-- Improved parsers module
-- Added feed parser &amp; thumbmaker into youtube module
-- Logging module tweaks
-- Updated user agents
-- Allow some modules to be used outside of Kodi as standalone ones
-- Allow nextitem to have title and/or name property
-- Add ability to clear all bookmarks at once
-- Add integer labels as optional parameters
-- Moved a few functions from client to other modules
-- Added the quote paths function, useful for non ascii characters in urls
-- Fix in url_dispatcher module
-- Added a few functions into control module
-- A few changes for Kodi 19+</news>
+[B]2.7.X[/B]
+- New cache functions (taken from ResolveURL and adapted)
+- Various other tweaks</news>
     </extension>
 </addon>
