@@ -1,3 +1,9 @@
+[B]2.8.X[/B]
+- Replaced xbmc.python import with xbmc.addon for Matrix compatibility
+- New utils module
+- Updated user agent strings
+- Updated m3u8 modules
+
 [B]2.7.X[/B]
 - New cache functions (taken from ResolveURL and adapted)
 - Various other tweaks
